--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,15 @@
   			<version>1.16.0</version>
 		</dependency>
 
+		<dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+    	<dependency>
+        	<groupId>com.h2database</groupId>
+        	<artifactId>h2</artifactId>
+    	</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/org.jmonkeyengine/jme3-testdata -->
 		<dependency>
